Update user management and authentication